containerJobs are uploaded

--- a/helper_funcs/test.ipynb
+++ b/helper_funcs/test.ipynb
@@ -232,6 +232,18 @@
     "if __name__ == '__main__':\n",
     "    run_sample()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24aecbf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 5\n",
+    "\n",
+    "max(min(pcd_filesize_in_GB*2.5, 10),10)"
+   ]
   }
  ],
  "metadata": {
